// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericSelectField  should render  snapshots for  loading items 1`] = `
<WithStyles(FormControl)
  error={false}
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    disabled={true}
    multiple={false}
    onChange={[Function]}
    value=""
  >
    <WithStyles(MenuItem)
      aria-label="Item 1"
      classes={
        Object {
          "selected": undefined,
        }
      }
      disabled={true}
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      aria-label="Item 2"
      classes={
        Object {
          "selected": undefined,
        }
      }
      disabled={true}
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value="Item 2"
    >
      Item 2
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      aria-label="Item 3"
      classes={
        Object {
          "selected": undefined,
        }
      }
      disabled={true}
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value="Item 3"
    >
      Item 3
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  no items 1`] = `
<WithStyles(FormControl)
  error={false}
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    multiple={false}
    onChange={[Function]}
    value=""
  />
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  one item 1`] = `
<WithStyles(FormControl)
  error={false}
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    multiple={false}
    onChange={[Function]}
    value=""
  >
    <WithStyles(MenuItem)
      aria-label="Item 1"
      classes={
        Object {
          "selected": undefined,
        }
      }
      disabled={true}
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;
